# FIBO

./: .gitignore  check_latent_stats.py  check_tb_dependency.py  compare_vaes.py  inspect_model_params.py  pyproject.toml
notebooks/: generate.ipynb
src/fine_tuning/: fine_tune_vae.py  vae_finetune.py
vae_log/vae-fine-tune/1763951788.5796204/: events.out.tfevents.1763951788.FAX.734134.1
vae_log/vae-fine-tune/1763951788.5810468/: hparams.yml
