[project]
name = "FIBO"
version = "0.1.0"
description = "FIBO is an open-source model trained on licensed data, transforming intent into structured control for precise, high-quality AI image generation across enterprise and agentic workflows."
readme = "README.md"
authors = [
    { name = "Kfir Goldberg", email = "kfir@bria.ai" },
    { name = "Gal Davidi", email = "gal@bria.ai" }
]
license = { text = "Attribution-NonCommercial 4.0 International" }
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.10.0",
    "bitsandbytes>=0.48.2",
    "boltons>=25.0.0",
    "datasets>=4.4.1",
    "diffusers==0.35.2",
    "einops>=0.8.1",
    "google-genai>=1.44.0",
    "huggingface-hub[hf-xet]>=0.35.3",
    "lpips>=0.1.4",
    "peft>=0.17.1",
    "prodigyopt>=1.1.2",
    "pytorch-optimizer>=3.8.2",
    "sentencepiece==0.2.1",
    "spaces>=0.42.1",
    "tensorboard>=2.20.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.57.1",
    "ujson>=5.11.0",
]

[project.optional-dependencies]
cu128 = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-timer>=1.0,<2.0",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }
torch = { index = "pytorch-cu128", extra = "cu128" }
torchvision = { index = "pytorch-cu128", extra = "cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
respect-gitignore = true

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["BLE", "E4", "E7", "E9", "F", "I", "ICN", "LOG", "PERF", "W"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --exitfirst --failed-first --showlocals --tb=long --full-trace"

# https://docs.astral.sh/ruff/settings/#lintisort
[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-wrap-aliases = true
from-first = false
known-first-party = ["src"]
relative-imports-order = "furthest-to-closest"
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

